ECA-12470: Fix bugs and improvements.